Fix css sizing issue on MobileNavBar

--- a/src/styles/MobileNavBar.module.css
+++ b/src/styles/MobileNavBar.module.css
@@ -22,7 +22,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 50vw;
+  width: 100%;
 
   gap: 15px;
 
